Update section text

--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
                             <details open class="section-letter-1">
                                 <summary>When?</summary>
                                 <span class="section-content">10 October, 2026. The ceremony will begin at 1 PM ET.</span>
+                                <br>
+                                <span class="section-content">Nighttime festivities will be held on 9 October. Please let us know if you're interested!</span>
                             </details>
                         </div>
                     </div>
@@ -45,7 +47,9 @@
                         <div class="section-header">
                             <details open class="section-letter-4">
                                 <summary>What to do While in Maine?</summary>
-                                <span class="section-content">Take time to explore Portland (roughly an hour from Whitefield) or Acadia National Park (roughly two hours from Whitefield).</span>
+                                <span class="section-content"><span class="section-name">A:&nbsp;</span>Take time to explore the Old Port (roughly an hour from Whitefield) or Acadia National Park (roughly two hours from Whitefield).</span>
+                                <br>
+                                <span class="section-content"><span class="section-name">G:&nbsp;</span>See every lighthouse you can!</span>
                             </details>
                         </div>
                     </div>
@@ -53,13 +57,25 @@
                         <div class="section-header">
                             <details open class="section-letter-5">
                                 <summary>What to Bring?</summary>
-                                <span class="section-content">Wedding gifts are not required nor expected and as such there is no registry. If you feel so moved, donations to wildlife conservation efforts are always appreciated!</span>
+                                <span class="section-content">Wedding gifts are not required nor expected and as such there is no registry. However, if you feel so moved:</span>
+                                <br>
+                                <span class="section-content"><span class="section-name">A:&nbsp;</span>Donations to wildlife conservation efforts are always appreciated.</span>
+                                <br>
+                                <span class="section-content"><span class="section-name">G:&nbsp;</span>Art of Cinnamon and Pepper!</span>
                             </details>
                         </div>
                     </div>
                     <div class="section">
                         <div class="section-header">
                             <details open class="section-letter-6">
+                                <summary>Where to Stay?</summary>
+                                <span class="section-content">Lodging is still TBD at this point. Please let us know if you have any specific desires or requests!</span>
+                            </details>
+                        </div>
+                    </div>
+                    <div class="section">
+                        <div class="section-header">
+                            <details open class="section-letter-7">
                                 <summary>What to Eat?</summary>
                                 <span class="section-content">Event menu TBD. Please check back!</span>
                             </details>
