Update text and colors. Fix header font on small screens

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                                 <summary>When?</summary>
                                 <span class="section-content">10 October, 2026. The ceremony will begin at 1 PM ET.</span>
                                 <br>
-                                <span class="section-content">Nighttime festivities will be held on 9 October. Please let us know if you're interested!</span>
+                                <span class="section-content">9 October, 2026: fall hike and nighttime festivities Please let us know if you're interested</span>
                             </details>
                         </div>
                     </div>
@@ -32,6 +32,8 @@
                             <details open class="section-letter-2">
                                 <summary>Where?</summary>
                                 <span class="section-content">Wooly Ass Farm. 208 N Hunts Meadow Rd, Whitefield, Maine.</span>
+                                <br>
+                                <span class="section-content">There will be sheep, donkeys, bunnies, ducks, dogs, and a cat present.</span>
                             </details>
                         </div>
                     </div>
@@ -40,6 +42,8 @@
                             <details open class="section-letter-3">
                                 <summary>What to Wear?</summary>
                                 <span class="section-content">Please wear what makes you comfortable. The event will not be overly formal, business casual will be fine!</span>
+                                <br>
+                                <span class="section-content">Check the weather before packing. October in Maine will be chilly and we are planning an outdoor event, weather permitting.</span>
                             </details>
                         </div>
                     </div>
@@ -57,11 +61,9 @@
                         <div class="section-header">
                             <details open class="section-letter-5">
                                 <summary>What to Bring?</summary>
-                                <span class="section-content">Wedding gifts are not required nor expected and as such there is no registry. However, if you feel so moved:</span>
+                                <span class="section-content">Wedding gifts are not required nor expected and as such there is no registry. However, if you feel so moved, donations to wildlife conservation efforts or your local animal shelter are always appreciated.</span>
                                 <br>
-                                <span class="section-content"><span class="section-name">A:&nbsp;</span>Donations to wildlife conservation efforts are always appreciated.</span>
-                                <br>
-                                <span class="section-content"><span class="section-name">G:&nbsp;</span>Art of Cinnamon and Pepper!</span>
+                                <span class="section-content">If you hate this answer, know that we always accept local or handmade art, especially of Cinnamon and Pepper!</span>
                             </details>
                         </div>
                     </div>
@@ -77,7 +79,15 @@
                         <div class="section-header">
                             <details open class="section-letter-7">
                                 <summary>What to Eat?</summary>
-                                <span class="section-content">Event menu TBD. Please check back!</span>
+                                <span class="section-content">Event menu TBD. Please check back! Let us know if you have any special dietary needs or requests and we will do our best to accomodate you.</span>
+                            </details>
+                        </div>
+                    </div>
+                    <div class="section">
+                        <div class="section-header">
+                            <details open class="section-letter-7">
+                                <summary>How to RSVP?</summary>
+                                <span class="section-content">Please text the bride or groom to RSVP. We look forward to seeing you!</span>
                             </details>
                         </div>
                     </div>
