--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
                         <div class="section-header">
                             <details open class="section-letter-1">
                                 <summary>When?</summary>
-                                <span class="section-content">10 October, 2026. The ceremony will begin at 1 PM ET.</span>
+                                <span class="section-content">10 October, 2026: the ceremony will begin at 1 PM ET.</span>
                                 <br>
-                                <span class="section-content">9 October, 2026: fall hike and nighttime festivities Please let us know if you're interested</span>
+                                <span class="section-content">9 October, 2026: optional fall hike and nighttime festivities Please let us know if you're interested.</span>
                             </details>
                         </div>
                     </div>
