Missing period in text

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                                 <summary>When?</summary>
                                 <span class="section-content">10 October, 2026: the ceremony will begin at 1 PM ET.</span>
                                 <br>
-                                <span class="section-content">9 October, 2026: optional fall hike and nighttime festivities Please let us know if you're interested.</span>
+                                <span class="section-content">9 October, 2026: optional fall hike and nighttime festivities. Please let us know if you're interested.</span>
                             </details>
                         </div>
                     </div>
